--- a/mcmclib.html
+++ b/mcmclib.html
@@ -103,7 +103,7 @@
             <li>Metropolis-adjusted Langevin algorithm (MALA).</li>
         </ul>
     </li>
-    <li>Support for multi-modal distributions via a parallelized implementation of the Differential Evolution (DE) algorithm.</li>
+    <li>Support for multi-modal distributions via Equi-Energy sampling and a parallelized implementation of the Differential Evolution (DE) algorithm.</li>
     <li>Built on the <a href="http://arma.sourceforge.net" target="_blank">Armadillo C++ linear algebra library</a> for fast and efficient matrix computation.</li>
 </ul>
 
