--- a/mcmclib_docs_settings.html
+++ b/mcmclib_docs_settings.html
@@ -95,6 +95,15 @@ struct algo_settings {
     arma::vec lower_bounds;
     arma::vec upper_bounds;
 
+    // AEES
+    int aees_n_draws = 1E04;
+    int aees_n_initial_draws = 1E03;
+    int aees_n_burnin = 1E03;
+
+    arma::vec aees_temper_vec;
+    double aees_prob_par = 0.10;
+    int aees_n_rings = 5;
+
     // DE
     bool de_jumps = false;
 
@@ -116,6 +125,8 @@ struct algo_settings {
     int hmc_n_burnin = 1E04;
 
     double hmc_step_size = 1.0;
+    int hmc_leap_steps = 1; // number of leap frog steps
+    arma::mat hmc_precond_mat;
 
     double hmc_accept_rate; // will be returned by the function
 
@@ -124,6 +135,7 @@ struct algo_settings {
     int mala_n_burnin = 1E04;
 
     double mala_step_size = 1.0;
+    arma::mat mala_precond_mat;
 
     double mala_accept_rate; // will be returned by the function
 
