--- a/mcmclib_docs_mala.html
+++ b/mcmclib_docs_mala.html
@@ -134,7 +134,7 @@ bool mala(const arma::vec& initial_vals, arma::mat& draws_out, std::function&lt;
     <li><code>int mala_n_draws</code> number of posterior draws to keep.</li>
     <li><code>int mala_n_burnin</code> number of burnin draws.</li>
     <li><code>double mala_step_size</code> step size $\epsilon$ below.</li>
-    <li><code>arma::mat hmc_precond_mat</code> preconditioning matrix $\mathbf{M}$.</li>
+    <li><code>arma::mat mala_precond_mat</code> preconditioning matrix $\mathbf{M}$.</li>
 </ul>
 
 <hr style="height:2px;border-width:0;background-color:black">
