--- a/r-mac-source.html
+++ b/r-mac-source.html
@@ -93,7 +93,7 @@
 </div>
 </div>
 
-<p>This page describes the steps involved in compiling R-devel on a Mac (macOS, formerly known as OS X, v10.13.2).</p>
+<p>This page describes the steps involved in compiling R-devel on a Mac operating system (macOS, formerly known as OS X, v10.13.2).</p>
 
 <hr style="height:2px;border-width:0;background-color:black">
 
