--- a/r-mac-source.html
+++ b/r-mac-source.html
@@ -94,7 +94,7 @@
 </div>
 </div>
 
-<p>This page describes the steps involved in compiling R-devel on a Mac operating system (macOS, formerly known as OS X), with an emphasis on non-standard build configurations that can <strong>improve computing times by up to 100x</strong> versus the standard R build.</p>
+<p>This page describes the steps involved in compiling R-devel on a Mac operating system (macOS, formerly known as OS X), with an emphasis on non-standard build configurations that can significantly improve computing times versus the standard R build.</p>
 
 <hr style="height:2px;border-width:0;background-color:black">
 
