--- a/r-mac-source.html
+++ b/r-mac-source.html
@@ -235,16 +235,21 @@ JAVA_LIBS="-L/${JAVA_HOME}/jre/lib/server -ljvm"</pre>
 
 <p>Note: Without the '-Wa,-q' option, '-march=native' optimizations will result in an unknown symbol error.</p>
 
-<p>To utilise OpenMP features we need to switch from Apple's version of LLVM. Install Clang v5.0 with MacPorts and modify the config.site file further:</p>
+<p>To utilise OpenMP features we need to switch from Apple's version of LLVM. Install Clang v6.0 with MacPorts </p>
+
+<pre  class="brush: bash;">
+sudo port install clang-6.0</pre>
+
+<p>and modify the config.site file further:</p>
 
 <pre  class="brush: bash;">
 #! /bin/sh
 
-CC=clang-mp-5.0
-CXX=clang++-mp-5.0
+CC=clang-mp-6.0
+CXX=clang++-mp-6.0
 F77=gfortran-mp-7
 FC=$F77
-OBJC=clang-mp-5.0
+OBJC=clang-mp-6.0
 CFLAGS="-Wall -march=native -g -O3 -ffp-contract=fast"
 CXXFLAGS="-Wall -march=native -g -O3 -ffp-contract=fast"
 OBJCFLAGS="-Wall -march=native -g -O3"
@@ -258,6 +263,10 @@ JAVA_HOME="$(/usr/libexec/java_home)"
 JAVA_CPPFLAGS="-I/${JAVA_HOME}/include -I/${JAVA_HOME}/include/darwin"
 JAVA_LD_LIBRARY_PATH="${JAVA_HOME}/jre/lib/server"
 JAVA_LIBS="-L/${JAVA_HOME}/jre/lib/server -ljvm"</pre>
+
+<p><strong>Note:</strong> If you receive a 'library not found for -lomp' error, add libomp.dylib to /usr/local/lib:</p>
+<pre  class="brush: bash;">
+sudo ln -s /opt/local/lib/libomp/libomp.dylib /usr/local/lib/libomp.dylib</pre>
 
 <hr>
 
