--- a/r-mac-source.html
+++ b/r-mac-source.html
@@ -312,7 +312,7 @@ make check</pre>
 
 <p>Finally, we need to choose an install location for R-devel; I use <code>/Users/${USER}/Desktop/R-devel</code>; I recommend installing to somewhere that doesn't require sudo privileges.</p>
 <pre  class="brush: bash;">
-sudo make prefix=/Users/${USER}/Desktop/R-devel install</pre>
+make prefix=/Users/${USER}/Desktop/R-devel install</pre>
 
 <hr>
 
