--- a/r-mac-source.html
+++ b/r-mac-source.html
@@ -74,8 +74,18 @@
         <!-- /.row -->
 
 
-<h3 style="text-align: center;"><strong style="font-size: 130%;">Building R-devel from Source</strong></h3>
-<h3 style="text-align: center;"><strong style="font-size: 130%;">macOS 10.13.2</strong></h3>
+<div class="row">
+    <div class="col-md-2 hidden-xs">
+        <!-- <img class="img-responsive" src="pics/wsp_2.jpg" alt=""> -->
+        <img src="pics/Rlogo.png" class="img-responsive center-block">
+    </div>
+    <div class="col-md-8">
+        <br>
+        <h3 style="text-align: center;"><strong style="font-size: 130%;">Building R-devel from Source</strong></h3>
+        <h3 style="text-align: center;"><strong style="font-size: 130%;">macOS 10.13.2</strong></h3>
+    </div>
+</div>
+
 </br>
 
 <div class="row">
