--- a/r-mac-source.html
+++ b/r-mac-source.html
@@ -77,7 +77,7 @@
 <div class="row">
     <div class="col-md-2 hidden-xs">
         <!-- <img class="img-responsive" src="pics/wsp_2.jpg" alt=""> -->
-        <img src="pics/Rlogo.png" class="img-responsive center-block">
+        <a href="https://www.r-project.org/" target="_blank"><img src="pics/Rlogo.png" class="img-responsive center-block"></a>
     </div>
     <div class="col-md-8">
         <br>
