--- a/bmr_header.html
+++ b/bmr_header.html
@@ -20,7 +20,7 @@
                 <ul class="dropdown-menu">
                     <li><a href="bmr_docs_vars_bvarm.html">bvarm</a></li>
                     <li><a href="bmr_docs_vars_bvars.html">bvars</a></li>
-                    <li><a href="bmr_docs_vars_bvarw.html">bvarw</a></li>
+                    <li><a href="bmr_docs_vars_bvarinw.html">bvarinw</a></li>
                     <li class="divider"></li>
                     <li><a href="bmr_docs_vars_cvar.html">cvar</a></li>
                     <li class="divider"></li>
