--- a/bmr_docs_vars_bvarm.html
+++ b/bmr_docs_vars_bvarm.html
@@ -199,10 +199,10 @@ $$
 Y = X \beta + e
 $$
 
-<p>The Minnesota prior (also known as Litterman's prior) holds fixed $\Sigma$, the covariance matrix of the disturbance terms, during posterior sampling. 
+<p>The Minnesota prior (also known as Litterman's prior) holds fixed the covariance matrix of disturbance terms, $\Sigma$, during posterior sampling. 
 This simplification yields a significant decrease in computational expenditure. The standard references for this type of model are Doan, Litterman, and Sims (1983) and Litterman (1986).</p>
 
-<p>The Minnesota prior sets $\Sigma$ to be a diagonal matrix, where the diagonal elements come from equation-by-equation estimation of an AR($p$) model for each of the $m$-variables. 
+<p>The Minnesota prior sets $\Sigma$ to be a diagonal matrix, where the diagonal elements come from equation-by-equation estimation of an AR($p$) model for each variable in the VAR system. 
     That is, for each variable in the VAR model, we estimate the model assuming that all coefficients, except their own-lag terms (and a possible constant term), are equal to zero.<p>
 $$
 	\Sigma = \begin{bmatrix} \sigma_{1}^2 &0 & 0 & \cdots & 0 \\ 0& \sigma_2^2 & 0 & \cdots & 0  \\ 0& 0 & \sigma_3^2 &  \cdots & 0  \\ \vdots & \vdots & \ddots &  \ddots &  \\ 0& 0 & 0 &  0 & \sigma_m^2  \end{bmatrix}
