--- a/statslib.html
+++ b/statslib.html
@@ -118,13 +118,13 @@ pre {
 
 <p><strong>Author</strong>: Keith O'Hara</p>
 
-<p><strong>License</strong>: StatsLib is licensed under the GNU General Public License (GPL) version 2, or (at your option) any later version.</p>
+<p><strong>License</strong>: StatsLib is licensed under the Apache License, Version 2.0.</p>
 
 <hr style="height:2px;border-width:0;background-color:black">
 
 <h3 style="text-align: left;"><strong style="font-size: 95%;">Available Distributions and Examples</strong></h3>
 
-<p>cdf, pdf, quantile, and random variable generation:</p>
+<p>Functions to compute the cdf, pdf, and quantile, as well as random sampling, are available for the following distributions:</p>
 <ul>
     <li>Bernoulli</li>
     <li>Beta</li>
@@ -132,15 +132,19 @@ pre {
     <li>Cauchy</li>
     <li>Chi-squared</li>
     <li>Exponential</li>
+    <li>F</li>
     <li>Gamma</li>
     <li>inverse-Gamma</li>
     <li>Laplace</li>
     <li>Logistic</li>
     <li>Log-Normal</li>
     <li>Normal (Gaussian)</li>
+    <li>Poisson</li>
+    <li>Student's t</li>
     <li>Uniform</li>
+    <li>Weibull</li>
 </ul>
-pdf and random variable generation only:
+In addition, pdf and randomization functions are available for several multivariate distributions:
 <ul>
     <li>inverse-Wishart</li>
     <li>Multivariate Normal</li>
@@ -164,7 +168,7 @@ pdf and random variable generation only:
     double qval_1 = stats::qlaplace(0.1,0.0,1.0)
 
     // matrix input of beta-distributed random variables
-    arma::mat beta_rvs = stats::rbeta(100,100,3.0,2.0);
+    arma::mat beta_rvs = stats::rbeta<arma::mat>(100,100,3.0,2.0);
     arma::mat beta_cdf_vals = stats::pbeta(beta_rvs,3.0,2.0);
 </pre>
 
