--- a/r-mac-source.html
+++ b/r-mac-source.html
@@ -320,7 +320,7 @@ make</pre>
 <pre  class="brush: bash;">
 make check</pre>
 
-<p>Finally, we need to choose an install location for R-devel; I use <code>/Users/${USER}/Desktop/R-devel</code>; I recommend installing to somewhere that doesn't require sudo privileges.</p>
+<p>Finally, we need to choose an install location for R-devel; I use <code>/Users/${USER}/Desktop/R-devel</code>; I recommend installing to somewhere that does not require sudo privileges.</p>
 <pre  class="brush: bash;">
 make prefix=/Users/${USER}/Desktop/R-devel install</pre>
 
