switch to secure HTTP

--- a/r-mac-source.html
+++ b/r-mac-source.html
@@ -65,7 +65,7 @@
         <div class="row">
             <div class="col-lg-12">
                 <ol class="breadcrumb">
-                    <li><a href="http://www.kthohr.com">Home</a></li>
+                    <li><a href="https://www.kthohr.com">Home</a></li>
                     <!-- <li><a href="r-code.html">R</a></li> -->
                     <li class="active">R-devel</li>
                 </ol>
