--- a/404.html
+++ b/404.html
@@ -60,7 +60,7 @@
                     <small>Page Not Found</small>
                 </h1>
                 <ol class="breadcrumb">
-                    <li><a href="http://www.kthohr.com">Home</a>
+                    <li><a href="https://www.kthohr.com">Home</a>
                     </li>
                     <li class="active">404</li>
                 </ol>
