--- a/bmr-replication-files.html
+++ b/bmr-replication-files.html
@@ -68,7 +68,7 @@
         <div class="row">
             <div class="col-lg-12">
                 <ol class="breadcrumb">
-                    <li><a href="http://www.kthohr.com">Home</a>
+                    <li><a href="https://www.kthohr.com">Home</a>
                     </li>
                     <li><a href="bmr.html">BMR</a></li>
                     <li class="active">Replication Files</li>
