--- a/bmr_header.html
+++ b/bmr_header.html
@@ -1,7 +1,7 @@
 <div class="row">
     <div class="col-lg-12">
         <ol class="breadcrumb">
-            <li><a href="http://www.kthohr.com">Home</a></li>
+            <li><a href="https://www.kthohr.com">Home</a></li>
             <li><a href="bmlib.html">BMLib</a></li>
             <li><a href="bmr.html">BMR</a></li>
             <li class="dropdown">
