--- a/footer.html
+++ b/footer.html
@@ -3,7 +3,7 @@
         <div class="row center">
             <p class="text-muted col-md-3 text-center">Copyright &copy; 2017 Keith O'Hara</p>
             <div class="text-muted2 col-md-6 text-center hidden-xs">
-                <a href="http://www.kthohr.com"><img class="img3" src="pics/footer_logo.png" alt="" width="35" height="35"></a>
+                <a href="https://www.kthohr.com"><img class="img3" src="pics/footer_logo.png" alt="" width="35" height="35"></a>
             </div>
         </div>
     </div>
