--- a/navbar.html
+++ b/navbar.html
@@ -9,8 +9,8 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <!-- <a class="navbar-brand" href="http://www.kthohr.com" style="color:white">Keith O'Hara</a> -->
-                <a class="navbar-left" href="http://www.kthohr.com"><img class="img2" src="pics/k_logo.png" alt="" width="50" height="50"></a>
+                <!-- <a class="navbar-brand" href="https://www.kthohr.com" style="color:white">Keith O'Hara</a> -->
+                <a class="navbar-left" href="https://www.kthohr.com"><img class="img2" src="pics/k_logo.png" alt="" width="50" height="50"></a>
             </div>
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
