--- a/optimlib_header.html
+++ b/optimlib_header.html
@@ -1,7 +1,7 @@
 <div class="row">
     <div class="col-lg-12">
         <ol class="breadcrumb">
-            <li><a href="http://www.kthohr.com">Home</a></li>
+            <li><a href="https://www.kthohr.com">Home</a></li>
             <li><a href="optimlib.html">OptimLib</a></li>
             <li class="dropdown">
                 <a href="#" class="dropdown-toggle" data-toggle="dropdown">Algorithms <b class="caret"></b></a>
