--- a/statslib.html
+++ b/statslib.html
@@ -73,7 +73,7 @@ pre {
         <div class="row">
             <div class="col-lg-12">
                 <ol class="breadcrumb">
-                    <li><a href="http://www.kthohr.com">Home</a></li>
+                    <li><a href="https://www.kthohr.com">Home</a></li>
                     <li class="active">StatsLib</li>
                 </ol>
             </div>
