--- a/trame-rcpp.html
+++ b/trame-rcpp.html
@@ -73,7 +73,7 @@ pre {
         <div class="row">
             <div class="col-lg-12">
                 <ol class="breadcrumb">
-                    <li><a href="http://www.kthohr.com">Home</a></li>
+                    <li><a href="https://www.kthohr.com">Home</a></li>
                     <li><a href="trame.html">TraME</a></li>
                     <li class="active">TraME-Rcpp</li>
                 </ol>
@@ -114,7 +114,7 @@ pre {
 
 <p><strong>License</strong>: TraME is licensed under the GNU General Public License (GPL) version 2, or (at your option) any later version.</p>
 
-<p><strong>Authors</strong>: <a href="http://alfredgalichon.com/" target="_blank">Alfred Galichon</a> and <a href="http://www.kthohr.com" target="_blank">Keith O'Hara</a></p>
+<p><strong>Authors</strong>: <a href="http://alfredgalichon.com/" target="_blank">Alfred Galichon</a> and <a href="https://www.kthohr.com" target="_blank">Keith O'Hara</a></p>
 
 <hr style="height:2px;border-width:0;background-color:black">
 
