--- a/trame.html
+++ b/trame.html
@@ -67,7 +67,7 @@
         <div class="row">
             <div class="col-lg-12">
                 <ol class="breadcrumb">
-                    <li><a href="http://www.kthohr.com">Home</a></li>
+                    <li><a href="https://www.kthohr.com">Home</a></li>
                     <li class="active">TraME</li>
                     <li><a href="trame-rcpp.html">TraME-Rcpp</a></li>
                 </ol>
@@ -138,7 +138,7 @@
 
 <p><strong>Authors</strong>:</p>
 <ul>
-    <li>TraME Team: <a href="http://alfredgalichon.com/" target="_blank">Alfred Galichon</a> and <a href="http://www.kthohr.com" target="_blank">Keith O'Hara</a>
+    <li>TraME Team: <a href="http://alfredgalichon.com/" target="_blank">Alfred Galichon</a> and <a href="https://www.kthohr.com" target="_blank">Keith O'Hara</a>
     <li>Contributors: Yifei Sun, <a href="https://sites.google.com/site/webersimonsite/home" target="_blank">Simon Weber</a></li>
 </ul>
 
