--- a/optimlib_docs_broyden.html
+++ b/optimlib_docs_broyden.html
@@ -108,19 +108,19 @@ pre {
 <pre class="brush: cpp;">
 // classic Broyden, without jacobian
 bool broyden(arma::vec& init_out_vals, std::function&lt;arma::vec (const arma::vec& vals_inp, arma::vec* grad_out, void* opt_data)&gt; opt_objfn, void* opt_data);
-bool broyden(arma::vec& init_out_vals, std::function&lt;arma::vec (const arma::vec& vals_inp, arma::vec* grad_out, void* opt_data)&gt; opt_objfn, void* opt_data, algo_settings& settings);
+bool broyden(arma::vec& init_out_vals, std::function&lt;arma::vec (const arma::vec& vals_inp, arma::vec* grad_out, void* opt_data)&gt; opt_objfn, void* opt_data, algo_settings_t& settings);
 
 // classic Broyden, with jacobian
 bool broyden(arma::vec& init_out_vals, std::function&lt;arma::vec (const arma::vec& vals_inp, void* opt_data)&gt; opt_objfn, void* opt_data, std::function&lt;arma::mat (const arma::vec& vals_inp, void* jacob_data)&gt; jacob_objfn, void* jacob_data);
-bool broyden(arma::vec& init_out_vals, std::function&lt;arma::vec (const arma::vec& vals_inp, void* opt_data)&gt; opt_objfn, void* opt_data, std::function&lt;arma::mat (const arma::vec& vals_inp, void* jacob_data)&gt; jacob_objfn, void* jacob_data, algo_settings& settings);
+bool broyden(arma::vec& init_out_vals, std::function&lt;arma::vec (const arma::vec& vals_inp, void* opt_data)&gt; opt_objfn, void* opt_data, std::function&lt;arma::mat (const arma::vec& vals_inp, void* jacob_data)&gt; jacob_objfn, void* jacob_data, algo_settings_t& settings);
 
 // derivative-free method of Li and Fukushima (2000)
 bool broyden_df(arma::vec& init_out_vals, std::function&lt;arma::vec (const arma::vec& vals_inp, void* opt_data)&gt; opt_objfn, void* opt_data);
-bool broyden_df(arma::vec& init_out_vals, std::function&lt;arma::vec (const arma::vec& vals_inp, void* opt_data)&gt; opt_objfn, void* opt_data, algo_settings& settings);
+bool broyden_df(arma::vec& init_out_vals, std::function&lt;arma::vec (const arma::vec& vals_inp, void* opt_data)&gt; opt_objfn, void* opt_data, algo_settings_t& settings);
 
 // derivative-free method with jacobian
 bool broyden_df(arma::vec& init_out_vals, std::function&lt;arma::vec (const arma::vec& vals_inp, void* opt_data)&gt; opt_objfn, void* opt_data, std::function&lt;arma::mat (const arma::vec& vals_inp, void* jacob_data)&gt; jacob_objfn, void* jacob_data);
-bool broyden_df(arma::vec& init_out_vals, std::function&lt;arma::vec (const arma::vec& vals_inp, void* opt_data)&gt; opt_objfn, void* opt_data, std::function&lt;arma::mat (const arma::vec& vals_inp, void* jacob_data)&gt; jacob_objfn, void* jacob_data, algo_settings& settings);
+bool broyden_df(arma::vec& init_out_vals, std::function&lt;arma::vec (const arma::vec& vals_inp, void* opt_data)&gt; opt_objfn, void* opt_data, std::function&lt;arma::mat (const arma::vec& vals_inp, void* jacob_data)&gt; jacob_objfn, void* jacob_data, algo_settings_t& settings);
 </pre>
 
 <p><strong>Function arguments:</strong></p>
