--- a/optimlib_docs_sumt.html
+++ b/optimlib_docs_sumt.html
@@ -92,7 +92,7 @@ bool sumt(arma::vec& init_out_vals, std::function&lt;double (const arma::vec& va
           std::function&lt;arma::vec (const arma::vec& vals_inp, arma::mat* jacob_out, void* constr_data)&gt; constr_fn, void* constr_data);
 
 bool sumt(arma::vec& init_out_vals, std::function&lt;double (const arma::vec& vals_inp, arma::vec* grad_out, void* opt_data)&gt; opt_objfn, void* opt_data,
-          std::function&lt;arma::vec (const arma::vec& vals_inp, arma::mat* jacob_out, void* constr_data)&gt; constr_fn, void* constr_data, algo_settings& settings);
+          std::function&lt;arma::vec (const arma::vec& vals_inp, arma::mat* jacob_out, void* constr_data)&gt; constr_fn, void* constr_data, algo_settings_t& settings);
 </pre>
 
 <p><strong>Function arguments:</strong></p>
