--- a/navbar.html
+++ b/navbar.html
@@ -62,7 +62,8 @@
                         </ul>
                     </li>
                     <li>
-                        <a href="research.html">Research</a>
+                        <!-- <a href="research.html">Research</a> -->
+                        <a href="#">Research</a>
                     </li>
                     <li class="dropdown">
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown">Teaching <b class="caret"></b></a>
