--- a/research.html
+++ b/research.html
@@ -73,12 +73,11 @@
             <div class="col-md-2"></div>
 
             <div class="col-md-8">
-                <h2 class="page-header"> Working Papers </h2>
+                <h2 class="page-header"> Old Papers </h2>
                 <div class="panel panel-default">
                     <div class="panel-heading">
                         <h4>MCMC Confidence Sets for Identified Sets</h4>
                         <h6>(with Xiaohong Chen, Timothy Christensen, and Elie Tamer)</h6>
-                        <h6><em>R&R at Econometrica</em></h6>
                         <hr style="height:2px;border-width:0;background-color:black" />
                         <!-- <hr /> -->
                         <h4><strong style="font-size: 90%;"><a data-toggle="collapse" href="#collapse1">Abstract</a> | <a href="docs/1605.00499.pdf" target="_blank">Paper</a> </strong></h4>
