--- a/optimlib.html
+++ b/optimlib.html
@@ -137,10 +137,11 @@
 
 <p><strong>Features</strong></p>
 <ul>
-    <li>Parallelized C++11 library of local and global optimization methods, as well as root finding techniques.</li>
-    <li>Numerous derivative-free algorithms including advanced metaheuristics.</li>
-    <li>Constrained optimization routines can handle simple box constraints to systems or complicated nonlinear constraints.</li>
+    <li>C++11 library of local and global optimization algorithms, as well as root finding techniques.</li>
+    <li>Derivative-free optimization using advanced, parallelized metaheuristics.</li>
+    <li>Constrained optimization routines can handle simple box constraints, or systems of nonlinear constraints.</li>
     <li>Built on the <a href="http://arma.sourceforge.net" target="_blank">Armadillo C++ linear algebra library</a> for fast and efficient matrix-based computation.</li>
+    <li>OpenMP-accelerated library, with straightforward linking with parallelized BLAS libraries such as OpenBLAS.</li>
     <li>Released under a permissive, non-GPL license.</li>
 </ul>
 
